refactor:style using tailwind css for style at header,sidebare,tweetEditor,tweetTitle,tweet,userProfil and home componets

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>React + TypeScript + Replit</title>
     <link href="/src/style/App.css" rel="stylesheet">
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="text-white bg-black mx-0 my-auto w-auto  ">
+    <div id="root" class="flex"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
